--- a/src/Masny.TimeTracker.Web/Views/_ViewImports.cshtml
+++ b/src/Masny.TimeTracker.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Masny.TimeTracker.Web
 @using Masny.TimeTracker.Web.Models
+@using Masny.TimeTracker.Web.ViewModels
+@using Masny.TimeTracker.WebApp.Shared.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
