--- a/src/Masny.TimeTracker.Web/Views/Account/Login.cshtml
+++ b/src/Masny.TimeTracker.Web/Views/Account/Login.cshtml
@@ -1,20 +1,37 @@
 ﻿@model UserLoginRequest
 
 @{
-    //ViewData["Title"] = Localizer["Title"];
     ViewData["Title"] = "Login page";
 }
 
-<form class="form-account form-bg shadow-sm" method="post" asp-controller="Account" asp-action="Login" asp-antiforgery="true">
-    <div asp-validation-summary="ModelOnly"></div>
-
-    <h1 class="h3 mb-3 font-weight-normal">Sign In</h1>
-
-    <input type="text" class="form-control" asp-for="Email" placeholder="Email" required autofocus />
-    <input type="password" class="form-control mb-3" asp-for="Password" placeholder="Password" required />
-
-    <p><span asp-validation-for="Email"></span></p>
-    <p><span asp-validation-for="Password"></span></p>
-
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
-</form>
+<div class="container col-xl-10 col-xxl-8 px-4 py-5">
+    <div class="row align-items-center g-lg-5 py-5">
+        <div class="col-lg-7 text-center text-lg-start">
+            <h1 class="display-4 fw-bold lh-1 mb-3">Vertically centered hero sign-up form</h1>
+            <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+            <img src="~/images/lion.jpeg" style="width: 25%;" alt="Alternate Text" />
+        </div>
+        <div class="col-md-10 mx-auto col-lg-5">
+            <form class="p-4 p-md-5 border rounded-3 bg-light" asp-controller="Account" asp-action="Login" asp-antiforgery="true">
+                <p><span asp-validation-for="Email"></span></p>
+                <p><span asp-validation-for="Password"></span></p>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" asp-for="Email" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="floatingPassword" asp-for="Password" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                </div>
+                <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                </div>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+                <hr class="my-4">
+                <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+            </form>
+        </div>
+    </div>
+</div>
