--- a/src/Masny.TimeTracker.Web/Views/Account/Login.cshtml
+++ b/src/Masny.TimeTracker.Web/Views/Account/Login.cshtml
@@ -1,5 +1,7 @@
 ﻿@model UserLoginRequest
 
+@inject IViewLocalizer Localizer
+
 @{
     ViewData["Title"] = "Login page";
 }
@@ -8,13 +10,14 @@
     <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-7 text-center text-lg-start">
             <h1 class="display-4 fw-bold lh-1 mb-3">Vertically centered hero sign-up form</h1>
+            <h1 class="display-4 fw-bold lh-1 mb-3">@Localizer["Header"]</h1>
             <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
             <img src="~/images/lion.jpeg" style="width: 25%;" alt="Alternate Text" />
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
             <form class="p-4 p-md-5 border rounded-3 bg-light" asp-controller="Account" asp-action="Login" asp-antiforgery="true">
-                <p><span asp-validation-for="Email"></span></p>
-                <p><span asp-validation-for="Password"></span></p>
+                <div class="validation" asp-validation-summary="All"></div>
+
                 <div class="form-floating mb-3">
                     <input type="email" class="form-control" id="floatingInput" asp-for="Email" placeholder="name@example.com">
                     <label for="floatingInput">Email address</label>
@@ -31,7 +34,13 @@
                 <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
                 <hr class="my-4">
                 <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+                <p><span asp-validation-for="Email"></span></p>
+                <p><span asp-validation-for="Password"></span></p>
             </form>
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
