--- a/src/Masny.TimeTracker.Web/Views/Record/Send.cshtml
+++ b/src/Masny.TimeTracker.Web/Views/Record/Send.cshtml
@@ -21,3 +21,7 @@
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">Send</button>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
