--- a/src/Masny.TimeTracker.Web/Views/Shared/_Layout.cshtml
+++ b/src/Masny.TimeTracker.Web/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
         <div class="container">
             &copy; 2022 - Masny.TimeTracker.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
+        <partial name="_SelectLanguagePartial" />
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
